--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ DATABASE_PORT=5432
 POSTGRES_PASSWORD=password123
 POSTGRES_USER=postgres
 POSTGRES_DB=backend_db
-POSTGRES_HOST=postgres
-POSTGRES_HOSTNAME=127.0.0.1
+POSTGRES_HOST=db_postgres
+
